<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="8dp"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_name"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prachi_potdar"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_of_grievance"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_related"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describe"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/describe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_got_automatically_submitted_before_time"
                android:layout_marginStart="8dp"
                android:textColor="@color/Orange_200"
                android:textSize="22sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/branch"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/branch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/computer"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>